--- a/config/field.field.node.sa_event.sa_body.yml
+++ b/config/field.field.node.sa_event.sa_body.yml
@@ -1,23 +1,23 @@
-uuid: 64261b76-108d-43f3-84bb-14df4a55a253
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.sa_register_link
+    - field.storage.node.sa_body
     - node.type.sa_event
   module:
-    - link
-id: node.sa_event.sa_register_link
-field_name: sa_register_link
+    - text
+id: node.sa_event.sa_body
+field_name: sa_body
 entity_type: node
 bundle: sa_event
-label: 'Register Link'
+label: Body
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  title: 1
-  link_type: 17
-field_type: link
+  display_summary: true
+  required_summary: false
+  allowed_formats: {  }
+field_type: text_with_summary
