Use saplings-content-base instead of saplings-content-types

--- a/recipe.yml
+++ b/recipe.yml
@@ -2,7 +2,7 @@ name: 'Saplings - Events'
 description: 'Configuration for Saplings Events'
 type: 'Site'
 recipes:
-  - saplings-content-types
+  - saplings-content-base
 install:
   # Contrib.
   - address
