--- a/config/core.entity_form_display.node.sa_event.default.yml
+++ b/config/core.entity_form_display.node.sa_event.default.yml
@@ -4,19 +4,19 @@ dependencies:
   config:
     - field.field.node.sa_event.sa_attendance_mode
     - field.field.node.sa_event.sa_availability
-    - field.field.node.sa_event.sa_cost
-    - field.field.node.sa_event.sa_currency
-    - field.field.node.sa_event.sa_event_category
-    - field.field.node.sa_event.sa_event_date
-    - field.field.node.sa_event.sa_location
-    - field.field.node.sa_event.sa_register_link
     - field.field.node.sa_event.sa_body
     - field.field.node.sa_event.sa_components
+    - field.field.node.sa_event.sa_cost
+    - field.field.node.sa_event.sa_currency
     - field.field.node.sa_event.sa_description
+    - field.field.node.sa_event.sa_event_category
+    - field.field.node.sa_event.sa_event_date
     - field.field.node.sa_event.sa_featured_image
     - field.field.node.sa_event.sa_header_position
     - field.field.node.sa_event.sa_hide_header
+    - field.field.node.sa_event.sa_location
     - field.field.node.sa_event.sa_overlay
+    - field.field.node.sa_event.sa_register_link
     - field.field.node.sa_event.sa_robots
     - field.field.node.sa_event.sa_seo_description
     - field.field.node.sa_event.sa_seo_image
@@ -153,6 +153,18 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  path:
+    type: path
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  published_at:
+    type: publication_date_timestamp
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   sa_attendance_mode:
     type: options_select
     weight: 11
@@ -162,85 +174,6 @@ content:
   sa_availability:
     type: options_select
     weight: 14
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  sa_cost:
-    type: number
-    weight: 12
-    region: content
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-  sa_currency:
-    type: string_textfield
-    weight: 13
-    region: content
-    settings:
-      size: 10
-      placeholder: ''
-    third_party_settings: {  }
-  sa_event_category:
-    type: options_buttons
-    weight: 22
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  sa_event_date:
-    type: smartdate_inline
-    weight: 10
-    region: content
-    settings:
-      modal: false
-      default_duration: 60
-      default_duration_increments: |-
-        30
-        60|1 hour
-        90
-        120|2 hours
-        custom
-      show_extra: false
-      hide_date: false
-      allday: true
-      remove_seconds: false
-      separator: to
-    third_party_settings: {  }
-  sa_location:
-    type: address_default
-    weight: 9
-    region: content
-    settings:
-      wrapper_type: fieldset
-    third_party_settings: {  }
-  sa_register_link:
-    type: link_default
-    weight: 15
-    region: content
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-  path:
-    type: path
-    weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  publish_on:
-    type: datetime_timestamp
-    weight: 9
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  publish_state:
-    type: options_select
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  published_at:
-    type: publication_date_timestamp
-    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -274,6 +207,21 @@ content:
         convert: '0'
         duplicate: duplicate
     third_party_settings: {  }
+  sa_cost:
+    type: number
+    weight: 12
+    region: content
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+  sa_currency:
+    type: string_textfield
+    weight: 13
+    region: content
+    settings:
+      size: 10
+      placeholder: ''
+    third_party_settings: {  }
   sa_description:
     type: string_textarea
     weight: 4
@@ -281,6 +229,31 @@ content:
     settings:
       rows: 5
       placeholder: ''
+    third_party_settings: {  }
+  sa_event_category:
+    type: options_buttons
+    weight: 22
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  sa_event_date:
+    type: smartdate_inline
+    weight: 10
+    region: content
+    settings:
+      modal: false
+      default_duration: 60
+      default_duration_increments: |-
+        30
+        60|1 hour
+        90
+        120|2 hours
+        custom
+      show_extra: false
+      hide_date: false
+      allday: true
+      remove_seconds: false
+      separator: to
     third_party_settings: {  }
   sa_featured_image:
     type: media_library_widget
@@ -304,11 +277,26 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+  sa_location:
+    type: address_default
+    weight: 9
+    region: content
+    settings:
+      wrapper_type: fieldset
+    third_party_settings: {  }
   sa_overlay:
     type: options_select
     weight: 6
     region: content
     settings: {  }
+    third_party_settings: {  }
+  sa_register_link:
+    type: link_default
+    weight: 15
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
     third_party_settings: {  }
   sa_robots:
     type: string_textfield
@@ -380,6 +368,8 @@ content:
     third_party_settings: {  }
 hidden:
   promote: true
+  publish_on: true
+  publish_state: true
   sticky: true
   unpublish_on: true
   unpublish_state: true
