adds link attibutes module to allow register link to be opened in a new window

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "require": {
       "drupal/address": "*",
       "drupal/calendar_view": "*",
+      "drupal/link_attributes": "*",
       "drupal/smart_date": "*"
   }
 }
