--- a/config/core.entity_form_display.node.sa_event.default.yml
+++ b/config/core.entity_form_display.node.sa_event.default.yml
@@ -25,7 +25,7 @@ dependencies:
   module:
     - address
     - field_group
-    - link
+    - link_attributes
     - media_library
     - media_library_edit
     - paragraphs
@@ -142,6 +142,8 @@ third_party_settings:
         formatter: closed
         description: ''
         required_fields: true
+_core:
+  default_config_hash: lkj055GecV2T4AK7QJGfsbNpuPvelBSR1m6qPNh11eM
 id: node.sa_event.default
 targetEntityType: node
 bundle: sa_event
@@ -156,6 +158,18 @@ content:
   path:
     type: path
     weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp
+    weight: 9
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  publish_state:
+    type: options_select
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -291,12 +305,20 @@ content:
     settings: {  }
     third_party_settings: {  }
   sa_register_link:
-    type: link_default
+    type: link_attributes
     weight: 15
     region: content
     settings:
       placeholder_url: ''
       placeholder_title: ''
+      enabled_attributes:
+        id: false
+        name: false
+        target: true
+        rel: true
+        class: true
+        accesskey: false
+      widget_default_open: expandIfValuesSet
     third_party_settings: {  }
   sa_robots:
     type: string_textfield
@@ -368,8 +390,6 @@ content:
     third_party_settings: {  }
 hidden:
   promote: true
-  publish_on: true
-  publish_state: true
   sticky: true
   unpublish_on: true
   unpublish_state: true
