--- a/recipe.yml
+++ b/recipe.yml
@@ -6,6 +6,7 @@ install:
   - address
   - calendar_view
   - calendar_view_multiday
+  - link_attributes
   - schema_event
   - smart_date
   - smart_date_recur
