--- a/recipe.yml
+++ b/recipe.yml
@@ -1,15 +1,26 @@
 name: 'Saplings - Events'
 description: 'Configuration for Saplings Events'
 type: 'Site'
+recipes:
+  - events
+  - events_calendar
+  - events_location
 install:
-  # Contrib.
-  - address
-  - calendar_view
-  - calendar_view_multiday
+  # Core.
+  - image
+  - link
   - link_attributes
+  - media
+  - node
+  - options
+  - taxonomy
+  # Contrib.
+  - access_unpublished
+  - metatag
+  - pathauto
+  - publication_date
+  - quick_node_clone
   - schema_event
-  - smart_date
-  - smart_date_recur
 config:
   actions:
     # Set permissions for anonymous role.
@@ -17,22 +28,22 @@ config:
       ensure_exists:
         id: anonymous
       grantPermissions:
-        - 'access_unpublished node sa_event'
+        - 'access_unpublished node event'
     # Set permissions for content editor role.
     user.role.content_editor:
       ensure_exists:
         id: content_editor
       grantPermissions:
-        - 'access_unpublished node sa_event'
-        - 'clone sa_event content'
-        - 'create sa_event content'
-        - 'create terms in sa_event_category'
-        - 'delete own sa_event content'
-        - 'delete sa_event revisions'
-        - 'edit any sa_event content'
-        - 'edit own sa_event content'
-        - 'edit terms in sa_event_category'
-        - 'revert sa_event revisions'
-        - 'set sa_event published on date'
-        - 'view any unpublished sa_event content'
-        - 'view sa_event revisions'
+        - 'access_unpublished node event'
+        - 'clone event content'
+        - 'create event content'
+        - 'create terms in event_category'
+        - 'delete own event content'
+        - 'delete event revisions'
+        - 'edit any event content'
+        - 'edit own event content'
+        - 'edit terms in event_category'
+        - 'revert event revisions'
+        - 'set event published on date'
+        - 'view any unpublished event content'
+        - 'view event revisions'
