--- a/config/field.field.node.event.sa_cost.yml
+++ b/config/field.field.node.event.sa_cost.yml
@@ -1,15 +1,11 @@
 langcode: en
 status: true
-dependencies:
-  config:
-    - field.storage.node.sa_cost
-    - node.type.sa_event
-id: node.sa_event.sa_cost
+id: node.event.sa_cost
 field_name: sa_cost
 entity_type: node
-bundle: sa_event
+bundle: event
 label: Cost
-description: 'The numeric price of the offer. Do not include dollar sign. '
+description: 'The numeric price of the offer. Do not include dollar sign.'
 required: false
 translatable: false
 default_value: {  }
