--- a/config/field.field.node.event.sa_event_category.yml
+++ b/config/field.field.node.event.sa_event_category.yml
@@ -1,14 +1,9 @@
 langcode: en
 status: true
-dependencies:
-  config:
-    - field.storage.node.sa_event_category
-    - node.type.sa_event
-    - taxonomy.vocabulary.sa_event_category
-id: node.sa_event.sa_event_category
+id: node.event.sa_event_category
 field_name: sa_event_category
 entity_type: node
-bundle: sa_event
+bundle: event
 label: 'Event Category'
 description: ''
 required: false
