--- a/config/taxonomy.vocabulary.sa_event_category.yml
+++ b/config/taxonomy.vocabulary.sa_event_category.yml
@@ -1,22 +1,6 @@
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+third_party_settings: { }
 name: 'Event Category'
 vid: sa_event_category
 description: 'Provides a way to categorize your events by shared characteristics or types. E.g. class, in-person, online, seminar.'
