--- a/config/field.storage.node.sa_validfrom.yml
+++ b/config/field.storage.node.sa_validfrom.yml
@@ -2,17 +2,17 @@ langcode: en
 status: true
 dependencies:
   module:
+    - datetime
     - node
-    - taxonomy
-id: node.sa_event_category
-field_name: sa_event_category
+id: node.sa_validfrom
+field_name: sa_validfrom
 entity_type: node
-type: entity_reference
+type: datetime
 settings:
-  target_type: taxonomy_term
-module: core
+  datetime_type: datetime
+module: datetime
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
