--- a/config/field.storage.node.sa_virtuallocation.yml
+++ b/config/field.storage.node.sa_virtuallocation.yml
@@ -2,17 +2,16 @@ langcode: en
 status: true
 dependencies:
   module:
+    - link
     - node
-    - taxonomy
-id: node.sa_event_category
-field_name: sa_event_category
+id: node.sa_virtuallocation
+field_name: sa_virtuallocation
 entity_type: node
-type: entity_reference
-settings:
-  target_type: taxonomy_term
-module: core
+type: link
+settings: {  }
+module: link
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
