--- a/recipe.yml
+++ b/recipe.yml
@@ -26,6 +26,7 @@ install:
   - schema_event
   - token
   - token_or
+  - view_unpublished
 config:
   actions:
     # Set permissions for anonymous role.
@@ -42,12 +43,12 @@ config:
         - 'access_unpublished node event'
         - 'clone event content'
         - 'create event content'
-        - 'create terms in event_category'
+        - 'create terms in sa_event_category'
         - 'delete own event content'
         - 'delete event revisions'
         - 'edit any event content'
         - 'edit own event content'
-        - 'edit terms in event_category'
+        - 'edit terms in sa_event_category'
         - 'revert event revisions'
         - 'set event published on date'
         - 'view any unpublished event content'
