--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
       "drupal/events": "*",
       "drupal/events_calendar": "*",
       "drupal/events_locations": "*",
+      "drupal/field_group": "*",
       "drupal/link_attributes": "*",
       "drupal/publication_date": "*",
       "drupal/quick_node_clone": "*",
